# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("apps") {
  testonly = true

  deps = [
    "//apps/benchmark",
    "//apps/benchmark:apptests",
    "//apps/moterm",
    "//apps/moterm:apptests",
    "//apps/moterm:gl_helper_test_app",
    "//apps/moterm:moterm_example_app",
  ]
}
